--- a/public/css/author.css
+++ b/public/css/author.css
@@ -45,16 +45,21 @@ html, body {
     box-sizing: content-box !important;
 }
 
-.node-header .buttons {
-    float: right;
-    padding: 0px;
-}
-
-.node-header .buttons button {
+.node-button {
     width: 30px;
     height: 30px;
     padding: 0px;
     margin: 0px;
+}
+
+.node-enable {
+    width: 30px;
+    height: 30px;
+}
+
+.node-enable {
+    width: 30px;
+    height: 30px;
 }
 
 .node-header input[type="text"] {
@@ -180,7 +185,8 @@ html, body {
 }
 
 .content-div {
-    padding: 5px;
+    background-color: lightblue; 
+    border-radius: 15px;
 }
 
 .activity-add-group {
@@ -188,12 +194,7 @@ html, body {
 }
 
 .content-item {
-    width: 100%;
     min-height: 100px;
-}
-textarea {
-    width: 100%;
-    height: 100%;
 }
 
 .story-icon {
