--- a/public/css/author.css
+++ b/public/css/author.css
@@ -20,7 +20,9 @@ html, body {
 
 #node-canvas {
     height: 100%;
-    background-color: #F0F0F0;
+    background-color: #e9ecef;
+    border-radius: 10px;
+    border: 1px solid #8D99A5;
     overflow: hidden;
 }
 
@@ -34,24 +36,58 @@ html, body {
 /* Nodes */
 .node {
     position: absolute !important;
-    width: 120px;
+    width: 150px;
     padding: 10px;
     padding-top: 0px;
     border-radius: 15px;
-    background-color: #7a7373;
+    background-color: #6c7a89;
     border: 1px solid;
     border-top: 15px solid;
-    border-color: darkred;
     box-sizing: content-box !important;
 }
 
-.node-header input[type="text"] {
+.node-name {
     width: 100%;
     background-color: transparent;
     border: 0px;
     font-size: 16pt;
     color: white;
-    overflow: hidden;
+}
+
+.node-button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 1px;
+    border-radius: 4px;
+}
+
+.node-button:active {
+    background-color: #00000040;
+}
+
+.node-button:focus {
+    border: none;
+    outline: none;
+}
+
+.node-modify {
+    border-radius: 4px;
+    background-color: #00000060;
+    border: none;
+    outline: none;
+    padding: 4px;
+    color: white;
+    width: 100%;
+}
+
+.node-modify:active {
+    background-color: #00000080;
+}
+
+.node-modify:focus {
+    border: none;
+    outline: none;
 }
 
 .node-inouts {
@@ -60,10 +96,6 @@ html, body {
 
 .node-inputs, .node-outputs {
     flex: 50%;
-}
-
-.node-outputs > button {
-    float: right;
 }
 
 .svg-connection {
@@ -75,8 +107,8 @@ html, body {
 .connection {
     position: relative;
     fill: none;
-    stroke-width: 5px;
-    stroke: steelblue;
+    stroke-width: 4px;
+    stroke: #01356A;
     pointer-events: all;
 }
 
@@ -84,32 +116,24 @@ html, body {
     position : relative;
     width: 20px;
     height: 20px;
-    border-radius: 16px;
-    
-    box-sizing: content-box !important;
-}
-.input {
-    border: 2px solid white;
+    border: 2px solid #212529;
+    border-radius: 5px;
     padding: 2px;
-    background-color: orange;
-    left: -20px;
 }
 
-.input:hover {
-    padding: 0px;
-    border: 4px solid white;
+.input {
+    background-color: orange;
+    left: -18px;
 }
 
 .output {
-    border: 2px solid white;
-    padding: 2px;
     background-color: green;
-    left: 55px;
+    left: 73px;
 }
 
-.output:hover {
+.output:hover, .input:hover {
     padding: 0px;
-    border: 4px solid white;
+    border: 3px solid #212529;
 }
 
 
@@ -118,44 +142,78 @@ html, body {
     height: 100%;
 }
 
+#editor-stories {
+}
+
 #editor-area-activities {
     height: 100%;
+}
+
+#editor-area-missions {
 }
 
 .editable-name {
     background-color: transparent;
     border: 0px;
-    font-weight: bold;
     font-size: 20pt;
     display: inline-block;
     width: 100%;
 }
 
-
-.activities-div {
-    padding: 15px;
-}
-
 .editable-name-div {
     overflow: hidden;
-}
-
-.story-div {
-    padding: 5px;
+    padding: 3px;
 }
 
 .mission-div {
-    background-color: #a8c5ff;
-    margin: 10px;
+    border-radius: 15px;
+    border: 1px solid;
+    border-top: 15px solid;
+    background-color: #6c7a89;;
 }
 
-.activity-div {
-    margin: 10px;
-    background-color: #87b3ff;
+.mission-button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 1px;
+    border-radius: 4px;
+}
+
+.mission-button:active {
+    background-color: #00000040;
+}
+
+.mission-button:focus {
+    border: none;
+    outline: none;
 }
 
 .mission-name {
     font-size: 15pt;
+    color: white;
+}
+
+.mission-col{
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 3px;
+    border-radius: 6px;
+    height: 24px;
+    width: 24px;
+    border: none;
+    outline: none;
+    padding: 2px;
+    -webkit-appearance: none;
+}
+
+.mission-col::-webkit-color-swatch-wrapper {
+    padding: 0;	
+}
+
+.mission-col::-webkit-color-swatch {
+    border: none;
+    border-radius: 5px;
 }
 
 .activity-name {
@@ -164,20 +222,29 @@ html, body {
 
 .content-buttons {
     float: left;
-    
 }
 
 .content-div {
-    background-color: lightblue; 
-    border-radius: 15px;
-}
-
-.activity-add-group {
-    padding: 5px;
+    background-color: #85C0FF; 
+    border-radius: 10px;
 }
 
 .content-item {
     min-height: 100px;
+}
+
+.story-icon, .mission-icon, .content-icon, .node-icon {
+    user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+.node-icon {
+    width: 24px;
+    height: 24px;
 }
 
 .story-icon {
@@ -185,6 +252,11 @@ html, body {
     left: -10px;
     width: 24px;
     height: 24px;
+}
+
+.input-icon {
+    width: 28px;
+    height: 28px;
 }
 
 .mission-icon {
