--- a/public/css/evaluator.css
+++ b/public/css/evaluator.css
@@ -246,11 +246,11 @@ body {
     bottom: 0;
 }
 
-    .answer-list > a {
-        font-size: 2vh;
-        word-wrap: break-word;
-        padding: .5px .5px .5px .5px;
-    }
+.answer-list > a {
+    font-size: 2vh;
+    word-wrap: break-word;
+    padding: .5px .5px .5px .5px;
+}
 
 .waiting-player:first-child {
     background: #007bff;
@@ -431,7 +431,7 @@ body {
 }
 
 /*User space*/
-#user-pane {
+.borders{
     display: none;
     width: 60vw;
     height: 50vh;
@@ -442,7 +442,7 @@ body {
     border: white 2px solid;
 }
 
-.user-space {
+.pop-space {
     width: 100%;
     height: 100%;
     top: 0;
@@ -465,7 +465,7 @@ body {
     font-size: 2vh;
 }
 
-#close_tab {
+.icon-close {
     float: right;
     margin-bottom: 2vw;
     color: #007bff;
@@ -605,3 +605,4 @@ td, th {
 #classification-table {
     font-size:2vh;
 }
+/*Downloads Window*/
