--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -3,11 +3,15 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    width: 35vh;
+    width: 90vw;
+    max-width: 50vh; 
     display: none;
     z-index: 100000;
-}
 
+}
+#chat-title {
+    font-size:2.5vh;
+}
 .panel-primary > .panel-heading {
     color: #fff;
     background-color: #428bca;
@@ -43,6 +47,7 @@
 .glyphicon-remove {
     right: 0;
     top: 10px;
+    font-size:2vh;
 }
 
 .glyphicon-send {
@@ -64,9 +69,9 @@
     margin-left: 10px;
 }
 
-    .chat-window > div > .panel {
-        border-radius: 5px 5px 0 0;
-    }
+.chat-window > div > .panel {
+    border-radius: 5px 5px 0 0;
+}
 
 .msg_container_base {
     background: #e5e5e5;
@@ -99,6 +104,7 @@
     border-radius: 2px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     max-width: 100%;
+    min-height:10vh;
 }
 
 .sent-msgs {
@@ -106,14 +112,15 @@
 }
 
 .messages > p {
-    font-size: 2vh;
+    font-size: 3vh;
     color: black;
     margin: 0 0 0.2rem 0;
     max-width: 100%;
+    word-wrap:break-word;
 }
 
 .messages > time {
-    font-size: 1.5vh;
+    font-size: 2vh;
     color: black;
 }
 
@@ -130,6 +137,7 @@
 
 .msg_sent > time {
     float: right;
+    margin-bottom:.5vh;
 }
 
 .msg_container_base::-webkit-scrollbar-track {
@@ -146,12 +154,14 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
-#send-msg{
-    margin:auto;
-    font-size:1rem;
+#send-msg {
+    margin: auto;
+    font-size: 2.5vh;
+    padding: .375rem .75rem;
 }
 #new_msg_text {
     outline:none;
+    font-size:2.5vh;
 }
 .form-control:focus{
      box-shadow:none;
