fix dropdown and update help pane

--- a/public/css/evaluator.css
+++ b/public/css/evaluator.css
@@ -1,6 +1,5 @@
 body {
     overflow: hidden;
-    background-color: #007bff;
 }
 
 .tab-content, .tab-pane{
@@ -75,6 +74,7 @@ body {
     width: 30vh;
     max-height: 40vh;
     overflow-y: auto;
+    position: initial !important;
 }
 
 .nav-item {
@@ -89,6 +89,8 @@ body {
 #navbarSupportedContent{
     padding:0;
     background:#007BFF;
+    position:fixed;
+    top:0;
 }
 /*Container correzioni*/
 .list-group {
