--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -11,6 +11,7 @@
 }
 #chat-title {
     font-size:2.5vh;
+    font-weight: normal;
 }
 .panel-primary > .panel-heading {
     color: #fff;
@@ -113,7 +114,7 @@
 
 .messages > p {
     font-size: 3vh;
-    color: black;
+    color: white;
     margin: 0 0 0.2rem 0;
     max-width: 100%;
     word-wrap:break-word;
@@ -121,7 +122,7 @@
 
 .messages > time {
     font-size: 2vh;
-    color: black;
+    color: white;
 }
 
 .msg_container {
