Divisone file e accessibilita' scanner

--- a/public/css/widgets.css
+++ b/public/css/widgets.css
@@ -133,8 +133,8 @@
 }
 .widget-scan-label {
     text-align: center;
-    border: 1vh #8d0000 outset;
-    background-color: #8d0000;
+    border: 1vh #ed0000 outset;
+    background-color: #ed0000;
     padding: 1vh;
     padding-top: 20vh;
     height:50vh;
