--- a/public/css/style_default.css
+++ b/public/css/style_default.css
@@ -14,6 +14,12 @@ h1 {
     font-family: "All The Roll";
     line-height: .7;
 }
+h1::before {
+    content: '(';
+}
+h1::after {
+    content: ')';
+}
 
 /* Label dello score */
 #score {
