--- a/public/css/player.css
+++ b/public/css/player.css
@@ -180,17 +180,22 @@ video {
     left: 15vw;
 }
 /*Finestra per l'help*/
-#helpPane {
+.help-color-border{
+    width: 100%;
+    height: 100%;
+    padding: 1vh;
+    overflow-y: auto;
+    font-size: 2vh;
+    word-break: break-word;
+}
+.help-white-border {
+    margin: auto;
+    top: 20vh;
+    left: 15vw;
+    position: fixed;
     width: 70vw;
     height: 60vh;
-    position: fixed;
-    margin:auto;
-    top:35vh;
-    left:15vw;
-    padding:1vh;
-    overflow-y:auto;
-    font-size:2vh;
-    word-break:break-word;
+    border: 3px solid white;
 }
 #new-help-req {
     text-align:center;
@@ -254,9 +259,9 @@ a.glyphicon-fullscreen:hover {
 }
 /* align icon */
 .left-addon .glyphicon {
-    left: 0;
-    top: 0;
-    padding-left:1.5vh;
+    left: 7%;
+    top: 32%;
+    padding:0;
 }
 /* add padding  */
 .left-addon input {
