foglio di stile museo+ didattica smeraldo+ aggiustamenti varie storie
didattica dello smeraldo fatto,
il css nuovo del museo lagga tantissimo, anche rimuovendo gli effetti di css al testo che potrebbero dare fastidio la situa non cambia

--- a/public/css/player.css
+++ b/public/css/player.css
@@ -139,6 +139,7 @@ video {
     margin: 2vh;
     vertical-align: top;
     height:5vh;
+    line-height:.5vh;
 }
 .default-input-num {
     width: 20vh;
