--- a/public/css/evaluator.css
+++ b/public/css/evaluator.css
@@ -6,62 +6,36 @@ body {
     width:100%;
 }
 /*Navbar*/
-@media only screen and (max-width: 1000px) {
-    .nav-item > a {
-        text-align: left !important;
-    }
-    #navbarSupportedContent {
-        top: 10vh !important;
-    }
-}
 
-#collapse-button{
-    margin-left:0;
-}
 .navbar-toggler:focus,
 .navbar-toggler:active,
 .navbar-toggler-icon:focus {
     outline: none;
     box-shadow: none;
 }
-.nav-item > a {
-    text-align:center;
+nav {
+    margin-left:20vw;
+    border-left:0;
+}
+.navbar{
+    margin-bottom:0;
+}
+#collapse-button{
+    margin-left:0;
 }
 .navbar-dark .navbar-toggler {
     color: white;
     padding:0;
     margin:0 auto;
 }
-.navbar-nav, navbar-nav.collapse, navbar-nav.collapsing, navbar-collapse.collapse, navbar-collapse.show {
-    background: #007bff;
-    padding: 0;
-    margin: 0;
-    max-height:70vh;
-    overflow-y: auto;
-}
 .dropdown {
     max-height:60vh;
 }
-.navbar-nav > li {
-    color: white;
-    margin-left: 1vw;
-}
-
 .nav-link {
-    font-size: 2.5vh;
     color:white !important;
 }
-
-.dropdown-item {
-    font-size: 2vh;
-}
-
-.navbar {
-    margin-bottom: 0;
-    left: 20vw;
-    width: 80vw;
-    height: 10vh;
-    border-radius: 0;
+#navTimeNotification{
+    vertical-align: top;
 }
 
 .badge-secondary {
@@ -77,28 +51,18 @@ body {
     width: 30vh;
     max-height: 20vh;
     overflow-y: auto;
+    margin:auto;
     position: initial !important;
 }
 
 .nav-item {
-    width: 15vw;
+    font-size:1.7em;
     color:white;
 }
 .navbar-toggler-icon {
     float:left;
     font-size:5vh;
     margin:auto;
-}
-#navbarSupportedContent{
-    padding:0;
-    background:#007BFF;
-    position:fixed;
-    top:0;
-    width:100%;
-}
-#navbarSupportedContent {
-    overflow-x:hidden;
-    max-height: inherit;
 }
 /*Container correzioni*/
 .list-group {
@@ -139,21 +103,29 @@ body {
     color: white;
     font-size: 3.5em;
     padding: 2vh;
-    padding-bottom:0;
     border: #007bff;
-    min-height: 50px;
+    min-height: 100px;
+    
 }
-@media only screen and (max-width:600px) {
+
+@media only screen and (max-width:1000px) {
 
     .waiting-player:first-child {
         font-size: 3vh;
         padding: 2vh;
-        
     }
 }
+
+@media only screen and (max-width:560px) {
+
+    .waiting-player:first-child {
+        font-size: 1.7em;
+    }
+}
+
 .waiting-player:first-child a {
-    margin: 0;
-    vertical-align: middle;
+margin: 0;
+vertical-align: middle;
 }
 .waiting-player:nth-child(2) {
     border-top: 1px solid #007bff;
