--- a/public/css/evaluator.css
+++ b/public/css/evaluator.css
@@ -2,9 +2,6 @@ body {
     overflow: hidden;
 }
 
-.tab-content, .tab-pane{
-    width:100%;
-}
 /*Navbar*/
 
 .navbar-toggler:focus,
@@ -141,6 +138,9 @@ vertical-align: middle;
     padding: 0.5vw;
 }
 /*Correction Pane*/
+#main-placeholder {
+    height: 100%;
+}
 .quest_header {
     text-align:center;
     font-size:3vh;
@@ -173,12 +173,15 @@ vertical-align: middle;
 .tab-pane {
     overflow-y: hidden;
 }
+.tab-content > .active{
+    overflow-y: hidden;
+    height:100%;
+}
+.tab-content {
+    height:calc(100vh - 62.7px);
+}
 .panel-default {
     margin-left: 20vw;
-}
-.panel-body {
-    height:80vh;
-    overflow-y:auto;
 }
 .history-table {
     margin-bottom:3vh;
@@ -193,9 +196,9 @@ vertical-align: middle;
 #correction-pane {
     padding-left: 1vw;
     padding-right: 1vw;
-    height: 80vh;
     overflow-y: auto;
     overflow-x: hidden;
+    height: calc(100% - 73px);
 }
 
 .description-div {
@@ -327,7 +330,7 @@ vertical-align: middle;
     top: 0;
     left: 0;
     width:50vw;
-    height: 50vh;
+    min-height: 50vh;
     margin:20vh 25vw 20vh 25vw;
     border: white 2px solid;
 }
@@ -600,7 +603,7 @@ td, th {
     font-size:2vh;
 }
 #downloads-content{
-    padding:1vh;
+    padding:0;
 }
 /*Help pane*/
 .help-comment{
