--- a/public/css/evaluator.css
+++ b/public/css/evaluator.css
@@ -50,6 +50,7 @@ nav {
     overflow-y: auto;
     margin:auto;
     position: initial !important;
+    font-size:1.5rem;
 }
 
 .nav-item {
@@ -61,6 +62,7 @@ nav {
     font-size:5vh;
     margin:auto;
 }
+
 /*Container correzioni*/
 .list-group {
     width: 15%;
@@ -151,20 +153,29 @@ vertical-align: middle;
     border: transparent;
     margin: auto;
 }
+#help_msg {
+    width:100%;
+    margin-top:2vh;
+    text-align:center;
+    font-size:2.5vh;
+}
 #user-space button {
     font-size:2vh;
     height:5vh;
 }
+#close-tab {
+    top: .3em;
+}
 #delete-player {
     padding:1vh;
 }
-.block-info:last-child {
+.button-block-info {
     margin-top: 1vh;
     font-size: 2vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    bottom:0;
+    bottom: 0;
 }
 .user-info-tab:hover {
     background-color: transparent;
@@ -388,6 +399,7 @@ vertical-align: middle;
 .pop-space {
     width: 100%;
     height: 100%;
+    position: absolute;
     top: 0;
     left: 0;
     border: #007bff 10px solid;
@@ -498,18 +510,18 @@ vertical-align: middle;
 }
 
 #timeNotification {
-    color: black;
+    color: #007bff;
     text-align: center;
     padding-top: 0.2vh;
     padding-left: 0.2vh;
     border-radius: 0.5vh;
-    font-size: 1.5vh;
+    font-size:1.5rem;
 }
 
 /*Notifications dot*/
 .dot {
-    min-width: 2vh;
-    min-height: 2vh;
+    min-width: 1.5vh;
+    min-height: 1.5vh;
     margin: .2vh;
     border-radius: 2vh;
     color: white;
