--- a/public/css/player.css
+++ b/public/css/player.css
@@ -1,10 +1,12 @@
 /*Tag*/
 h1 {
+    font-size: 8vh;
+    text-align: center;
     line-height: 1;
 }
 img {
     object-fit: contain;
-    width: 100%;
+    width: 60vmin;
     height: auto;
 }
 
@@ -50,22 +52,28 @@ video {
 
 #nome-attivita {
     text-align: center;
+    font-size: 2.5vh;
+    font-weight: 600;
 }
 
 #nome-missione {
     text-align: center;
     margin-bottom: 0.5vh;
+    font-size: 4vh;
 }
 
 .testo-attivita {
     margin-left: 1.5vh;
     margin-right: 1.5vh;
     margin-top: .5vh;
+    font-size: 2.5vh;
 }
 .testo-attivita img {
     text-align: center;
     vertical-align: middle;
     border-style: none;
+    margin: auto;
+    display: block;
 }
 /*Notifica nuovo punteggio*/
 .notification-bar {
@@ -164,6 +172,7 @@ video {
     margin: auto;
     font-weight: bold;
     font-size: 3vh;
+    opacity: 0.7;
 }
 
 #window-input-text > button {
@@ -173,6 +182,7 @@ video {
     height: 5vh;
     font-size: 2vh;
     font-weight: bold;
+    color: white;
 }
 
 #window-input-text {
@@ -182,6 +192,8 @@ video {
     position: fixed;
     top: 37vh;
     left: 15vw;
+    background-color: white;
+    border: 2px solid white;
 }
 /*Finestra per l'help*/
 .help-color-border{
@@ -191,6 +203,7 @@ video {
     overflow-y: auto;
     font-size: 2vh;
     word-break: break-word;
+    background:white;   
 }
 .help-white-border {
     margin: auto;
@@ -230,6 +243,7 @@ video {
     display:block;
     min-height: 5vh;
     margin-bottom:1vh;
+    background-color:rgba(200,200,200, .5);
 }
 #close-help-pane{
     float:right;
@@ -308,9 +322,12 @@ input[type="file"] {
     float:right;
     margin-right:2vh;
     margin-bottom:0;
+    font-size: 3vh;
+    font-weight: normal;
 }
 #final-text {
     text-align:center;
+    font-size: 5vh;
 }
 /*notifica nuovo messaggio chat*/
 .dot {
