--- a/public/css/evaluator.css
+++ b/public/css/evaluator.css
@@ -389,9 +389,9 @@ vertical-align: middle;
     color:white;
     font-size:3vh;
 }
-.glyphicon-remove {
-    line-height:0  !important;
-    font-size: 3vh !important;
+.borders .glyphicon-remove {
+    line-height: 0;
+    font-size: 3vh;
 }
 #back-button{
     font-size:3vh;
