--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -14,6 +14,10 @@
     font-size: 2.5vh;
     font-weight: normal;
 }
+.panel-heading {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+}
 .panel-primary > .panel-heading {
     padding-top: 2px;
     padding-bottom: 2px;
@@ -158,6 +162,9 @@
 .msg_container_base::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
+}
+#chat .btn-info {
+    border-color: transparent;
 }
 #send-msg {
     margin: auto;
