--- a/public/css/player.css
+++ b/public/css/player.css
@@ -9,6 +9,7 @@ body {
     background-size: cover !important;
     background-position: center !important;
     height: 100%;
+    min-height: 100vh;
 }
 img {
     object-fit: contain;
