--- a/public/css/author.css
+++ b/public/css/author.css
@@ -142,7 +142,14 @@ html, body {
     height: 100%;
 }
 
+#editor-placeholder-text {
+    font-size: 20pt;
+    font-style: italic;
+    color: gray;
+}
+
 #editor-stories {
+    border-right: 1px solid gray;
 }
 
 #editor-area-activities {
@@ -236,10 +243,16 @@ html, body {
 }
 
 #preview-body {
-    border: 2px solid black;
-    border-radius: 3px;
+    border: 4px solid black;
+    border-top: 30px solid black;
+    border-bottom: 45px solid black;
+    border-radius: 30px;
     background-size: 100% 100%;
+    width: 15vw;
+    height: 30vw;
     position: relative;
+    margin: auto;
+    overflow: hidden;
 }
 
 #preview-activity-area {
@@ -268,18 +281,20 @@ html, body {
 }
 
 #preview-button {
-    margin: auto;
+    left: 5vw;
     display: block;
-    border: 0px;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 1vw;
 }
 
 #preview-chat {
     position: absolute;
     bottom: 0px;
     right: 0px;
-    width: 75px;
-    height: 100px;
-    background-color: white;
+    width: 5vw;
+    height: 7vw;
+    background-color: #e5e5e5;
     border: 1px solid black;
 }
 
